codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__mcp_inventory_loading_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 3477
expression: rendered
---
• Loading MCP inventory…
