codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_status_only_servers.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
