codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ps_output_chunk_leading_whitespace_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/ps

Background terminals

  • just fix
    ↳   indented first
          more indented
