codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ps_output_empty_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
# tui/src/snapshots/codex_tui__history_cell__tests__ps_output_empty_snapshot.snap
/ps

Background terminals

  • No background terminals running.
