codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ps_output_long_command_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
# tui/src/snapshots/codex_tui__history_cell__tests__ps_output_long_command_snapshot.snap
/ps

Background terminals

  • rg "foo" src --glob '**/*. [...]
